Closed Bug 1789081 Opened 2 years ago Closed 2 years ago

fontstyle/fontweight attributes should not cancel automatic mathvariant transform on single-char mi

Categories

(Core :: MathML, defect)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox106 --- fixed

People

(Reporter: fredw, Assigned: fredw)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Attached file mi-fontweight-fontstyle.html (obsolete) —

This is another cleanup similar to bug 1788645.

This hack was introduced in bug 1027354 to make the MathML1 fontweight/fontstyle attributes work even when we have automatic mathvariant.

We can now remove that now that fontweight/fontstyle are completely removed.

Attached is a testcase that works in Chrome (exp web platform features enabled) but not in Firefox.

Attachment #9292964 - Attachment is obsolete: true

Sorry the desc is incorrect, actually reading the code it's attributes fontstyle="normal" and fontweight="bold" which incorrectly cancel automatic mathvariant italic.

The testcase was probably failing because we need https://phabricator.services.mozilla.com/D156174

Summary: font-style/font-weight should not cancel automatic mathvariant transform on single-char mi → fontstyle/fontweight attributes should not cancel automatic mathvariant transform on single-char mi

Some code was introduced in [1] to fix a regression with deprecated
fontstyle/fontweight attributes. However, this is no longer needed since
implementation for these attributes have been completely removed [2] and
may prevent automatic mathvariant italicization on single-char <mi>.
Also add a WPT test to check for this.

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=1027354
[2] https://bugzilla.mozilla.org/show_bug.cgi?id=1783841

Pushed by fred.wang@free.fr:
https://hg.mozilla.org/integration/autoland/rev/93f99157f81e
fontstyle/fontweight attributes should not cancel automatic mathvariant transform on single-char mi. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/35776 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Upstream PR merged by jgraham
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: