Bug 1789081: fontstyle/fontweight attributes should not cancel automatic mathvariant transform on single-char mi. r=emilio

Some code was introduced in [1] to fix a regression with deprecated
fontstyle/fontweight attributes. However, this is no longer needed since
implementation for these attributes have been completely removed [2] and
may prevent automatic mathvariant italicization on single-char <mi>.
Also add a WPT test to check for this.

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=1027354
[2] https://bugzilla.mozilla.org/show_bug.cgi?id=1783841

Differential Revision: https://phabricator.services.mozilla.com/D156373